<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView_birthYear"
        style="@style/fieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="33dp"
        android:text="@string/birth_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_birthYear"
        style="@style/inputStyle"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_birthYear"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_birthMonth"
        style="@style/fieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/birth_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_birthYear" />

    <EditText
        android:id="@+id/editText_birthMonth"
        style="@style/inputStyle"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_birthMonth"
        app:layout_constraintTop_toBottomOf="@+id/editText_birthYear" />

    <TextView
        android:id="@+id/textView_birthDay"
        style="@style/fieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/birth_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_birthMonth" />


    <EditText
        android:id="@+id/editText_birthDay"
        style="@style/inputStyle"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_birthDay"
        app:layout_constraintTop_toBottomOf="@+id/editText_birthMonth" />

    <Button
        android:id="@+id/calc_button"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/calculate"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_birthDay"
        app:strokeColor="#070707"
        app:strokeWidth="4px" />

    <TextView
        android:id="@+id/textView_alivePrompt"
        style="@style/fieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/you_have_been_alive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc_button" />

    <TextView
        android:id="@+id/textViewHours"
        style="@style/outputStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_alivePrompt" />

    <TextView
        android:id="@+id/textViewHours_readOnly"
        style="@style/fieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/hours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHours" />

    <TextView
        android:id="@+id/textViewMinutes"
        style="@style/outputStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHours_readOnly" />

    <TextView
        android:id="@+id/textViewMinutes_readOnly"
        style="@style/fieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/minutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMinutes" />

    <TextView
        android:id="@+id/textViewSeconds"
        style="@style/outputStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMinutes_readOnly" />

    <TextView
        android:id="@+id/textViewSeconds_readOnly"
        style="@style/fieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/seconds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSeconds" />

</androidx.constraintlayout.widget.ConstraintLayout>